# opencv

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.bcc  Makefile.gcc  Makefile.icl  Makefile.in  Makefile.vc  OpenCV.spec  OpenCV.spec.in  THANKS  aclocal.m4  autogen.sh  bootstrap  configure  configure.in  cvconfig.h.in  opencv-config.in  opencv.pc  opencv.pc.in  opencv.spec  opencv_0.9.5.orig.tar.gz.delta  opencv_0.9.5.orig.tar.gz.id  opencv_0.9.6.orig.tar.gz.delta  opencv_0.9.6.orig.tar.gz.id  opencv_0.9.7.orig.tar.gz.delta  opencv_0.9.7.orig.tar.gz.id  opencv_1.0.0.orig.tar.gz.delta  opencv_1.0.0.orig.tar.gz.id  opencv_2.0.0.orig.tar.gz.delta  opencv_2.0.0.orig.tar.gz.id  opencv_2.1.0.orig.tar.gz.delta  opencv_2.1.0.orig.tar.gz.id  opencv_2.2.0.orig.tar.gz.delta  opencv_2.2.0.orig.tar.gz.id  opencv_2.3.0.orig.tar.gz.id
_dsw/: Makefile  Makefile.in  OpenCVlight.dsw
_make/: .cvsignore  log  makefile.bcc  makefile.gcc  makefile.icl  makefile.vc  mll.dsw  opencv.dsw  opencv.opt  opencv.sln  opencv_directshow.dsw  opencv_directshow.ncb  opencv_directshow.opt  opencv_directshow.sln
apps/: Makefile  Makefile.am  Makefile.in
apps/HaarFaceDetect/: HaarFaceDetect.dsp  Makefile  Makefile.am  Makefile.in  cvfltk.h  facedetect.cpp
apps/HaarFaceDetect/SampleBase/: Makefile.am
apps/HaarFaceDetect/SampleBase/0/: AdaBoostCARTHaarClassifier.txt
apps/HaarFaceDetect/SampleBase/1/: AdaBoostCARTHaarClassifier.txt
apps/HaarFaceDetect/SampleBase/10/: AdaBoostCARTHaarClassifier.txt
apps/HaarFaceDetect/SampleBase/11/: AdaBoostCARTHaarClassifier.txt
apps/HaarFaceDetect/SampleBase/12/: AdaBoostCARTHaarClassifier.txt
apps/HaarFaceDetect/SampleBase/13/: AdaBoostCARTHaarClassifier.txt
apps/HaarFaceDetect/SampleBase/14/: AdaBoostCARTHaarClassifier.txt
apps/HaarFaceDetect/SampleBase/15/: AdaBoostCARTHaarClassifier.txt
apps/HaarFaceDetect/SampleBase/16/: AdaBoostCARTHaarClassifier.txt
apps/HaarFaceDetect/SampleBase/17/: AdaBoostCARTHaarClassifier.txt
apps/HaarFaceDetect/SampleBase/18/: AdaBoostCARTHaarClassifier.txt
apps/HaarFaceDetect/SampleBase/19/: AdaBoostCARTHaarClassifier.txt
apps/HaarFaceDetect/SampleBase/2/: AdaBoostCARTHaarClassifier.txt
apps/HaarFaceDetect/SampleBase/20/: AdaBoostCARTHaarClassifier.txt
apps/HaarFaceDetect/SampleBase/21/: AdaBoostCARTHaarClassifier.txt
apps/HaarFaceDetect/SampleBase/22/: AdaBoostCARTHaarClassifier.txt
apps/HaarFaceDetect/SampleBase/23/: AdaBoostCARTHaarClassifier.txt
apps/HaarFaceDetect/SampleBase/24/: AdaBoostCARTHaarClassifier.txt
apps/HaarFaceDetect/SampleBase/3/: AdaBoostCARTHaarClassifier.txt
apps/HaarFaceDetect/SampleBase/4/: AdaBoostCARTHaarClassifier.txt
apps/HaarFaceDetect/SampleBase/5/: AdaBoostCARTHaarClassifier.txt
apps/HaarFaceDetect/SampleBase/6/: AdaBoostCARTHaarClassifier.txt
apps/HaarFaceDetect/SampleBase/7/: AdaBoostCARTHaarClassifier.txt
apps/HaarFaceDetect/SampleBase/8/: AdaBoostCARTHaarClassifier.txt
apps/HaarFaceDetect/SampleBase/9/: AdaBoostCARTHaarClassifier.txt
cv/: Makefile.in
cvaux/: Makefile.in
cvaux/src/: Makefile.am  Makefile.in  _cvaux.h  _cvfacedetection.h  camshift.cpp  cv3dtracker.cpp  cvaux.dsp  cvaux.rc  cvaux.vcproj  cvauxutils.cpp  cvbgfg_acmmm2003.cpp  cvbgfg_common.cpp  cvbgfg_gaussmix.cpp  cvcalibfilter.cpp  cvclique.cpp  cvcorrespond.cpp  cvcorrimages.cpp  cvcreatehandmask.cpp  cvdpstereo.cpp  cveigenobjects.cpp  cvepilines.cpp  cvface.cpp  cvfacedetection.cpp  cvfacetemplate.cpp  cvfindface.cpp  cvfindhandregion.cpp  cvhaar.cpp  cvhaarfacecascade.cpp  cvhmm.cpp  cvhmm1d.cpp  cvhmmobs.cpp  cvlcm.cpp  cvlee.cpp  cvlevmar.cpp  cvlevmarprojbandle.cpp  cvlevmartrif.cpp  cvlines.cpp  cvlmeds.cpp  cvmat.cpp  cvmorphcontours.cpp  (+11 more)
cxcore/: Makefile.in
data/: Makefile.in
debian/: .gitignore  README.Debian  changelog  control  copyright  libcv-dev.install  libcv-dev.manpages  libcv0.9-0c2.install  libcv1.install  libcvaux-dev.install  libcvaux0.9-0.install  libcvcam-dev.install  libcvcam0.9-5.install  libhighgui-dev.install  libhighgui0.9-0.install  libopencv-core-dev.install  libopencv-dev.install  libopencv-doc.dirs  libopencv0.9-5.install  opencv-config.1  opencv-createsamples.1  opencv-doc.dirs  opencv-doc.install  rules  (+5 more)
(+603 files in other folders)
